objects/Product2.object
<CustomObject>
    <fields>
        <fullName>TertiaryBenchmark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tertiary Benchmark</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Benchmark</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Tertiary Benchmark)</relationshipLabel>
        <relationshipName>TertiaryBenchmarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThreadbackPerformanceShareClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to create the footnote that the given share class includes performance from another share class.</description>
        <inlineHelpText>If the product's performance includes performance data from another share class, choose the associated share class.</inlineHelpText>
        <label>Threadback Performance Share Class</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The associated share class must share the same parent mutual fund product</errorMessage>
            <filterItems>
                <field>$Source.ParentProduct__c</field>
                <operation>equals</operation>
                <valueField>$Source.ParentProduct__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Threadback Performance Share Class)</relationshipLabel>
        <relationshipName>ThreadbackProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top10HoldingsPublishingSchedule__c</fullName>
        <description>Used in Apex to set the Product Characteristic publishing schedule for Top 10 Holdings.</description>
        <label>Top 10 Holdings Publishing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CDRPublishingSchedule</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TradingSymbol__c</fullName>
        <externalId>true</externalId>
        <label>Trading Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTDPurchases__c</fullName>
        <label>YTD Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>ASGETF</fullName>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>AffiliateLU__c</columns>
        <columns>FundCompany__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>ProductType__c</columns>
        <columns>AssetClass__c</columns>
        <columns>ParentProduct__c</columns>
        <columns>PartNum__c</columns>
        <columns>ShortName__c</columns>
        <columns>TradingSymbol__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>equals</operation>
            <value>ASG ETF CONSERVATIVE PORTFOLIO</value>
        </filters>
        <label>ASG ETF CONSERVATIVE PORTFOLIO</label>
    </listViews>
    <listViews>
        <fullName>Active_ProductsStrategy</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>ProductType__c</columns>
        <columns>AssetClass__c</columns>
        <columns>AffiliateLU__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ParentProduct__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ProductType__c</field>
            <operation>contains</operation>
            <value>SERVICE,STRATEGY</value>
        </filters>
        <label>Products Strategy - Active</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_ProductsnoStrat</fullName>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>AffiliateLU__c</columns>
        <columns>FundCompany__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>ProductType__c</columns>
        <columns>AssetClass__c</columns>
        <columns>ParentProduct__c</columns>
        <columns>PartNum__c</columns>
        <columns>ShortName__c</columns>
        <columns>TradingSymbol__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ProductType__c</field>
            <operation>notEqual</operation>
            <value>STRATEGY</value>
        </filters>
        <label>Products no strategies  - Active</label>
    </listViews>
    <listViews>
        <fullName>Benchmarks</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>LegalName__c</columns>
        <columns>TradingSymbol__c</columns>
        <columns>InceptionDate__c</columns>
        <columns>ParentProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Benchmark</value>
        </filters>
        <label>Benchmarks</label>
        <sharedTo>
            <group>CDR</group>
            <group>Product_Mgmt_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>ProductType__c</columns>
        <columns>AssetClass__c</columns>
        <columns>AssetSubClass__c</columns>
        <columns>AffiliateLU__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Products - Inactive</label>
    </listViews>
    <listViews>
        <fullName>MCDONNELL</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>ParentProduct__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>ProductType__c</columns>
        <columns>AssetClass__c</columns>
        <columns>AssetSubClass__c</columns>
        <columns>AffiliateLU__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>TradingSymbol__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>MCDONNELL</value>
        </filters>
        <filters>
            <field>TradingSymbol__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>MCDONNELL</label>
    </listViews>
    <listViews>
        <fullName>Mutual_Funds_Active</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>LegalName__c</columns>
        <columns>InceptionDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.MutualFund</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mutual Funds - Active</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mutual_Funds_and_ETFs</fullName>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>LegalName__c</columns>
        <columns>TradingSymbol__c</columns>
        <columns>ParentProduct__c</columns>
        <columns>InceptionDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.MutualFund,Product2.ETF</value>
        </filters>
        <label>Mutual Funds and ETFs</label>
    </listViews>
    <listViews>
        <fullName>Products_Standardized_RFP</fullName>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>AffiliateLU__c</columns>
        <columns>FundCompany__c</columns>
        <columns>ProductType__c</columns>
        <columns>AssetClass__c</columns>
        <columns>ParentProduct__c</columns>
        <columns>PartNum__c</columns>
        <columns>ShortName__c</columns>
        <columns>TradingSymbol__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StandardizedRFPMutualFund__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Products - Standardized RFP</label>
        <sharedTo>
            <group>Product_Mgmt_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Products_w_Prod_Perf_Mutual_Fund_ETF</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>LegalName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MaxInternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MaxExternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.MutualFund,Product2.ETF</value>
        </filters>
        <label>Products w Prod Perf - Mutual Fund/ETF</label>
        <sharedTo>
            <group>CDR</group>
            <group>Product_Mgmt_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Products_with_Prod_Perf_All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>LegalName__c</columns>
        <columns>TradingSymbol__c</columns>
        <columns>ParentProduct__c</columns>
        <columns>InceptionDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MaxInternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MaxExternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Products with Prod Perf - All</label>
    </listViews>
    <listViews>
        <fullName>Products_with_Prod_Perf_ETF</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>LegalName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MaxInternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MaxExternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.ETF</value>
        </filters>
        <label>Products with Prod Perf - ETF</label>
        <sharedTo>
            <group>CDR</group>
            <group>Product_Mgmt_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Products_with_Prod_Perf_Mutual_Fund</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>LegalName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MaxInternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MaxExternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.MutualFund</value>
        </filters>
        <label>Products with Prod Perf - Mutual Fund</label>
        <sharedTo>
            <group>CDR</group>
            <group>Product_Mgmt_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Products_with_Prod_Perf_Share_Class</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>LegalName__c</columns>
        <columns>TradingSymbol__c</columns>
        <columns>InceptionDate__c</columns>
        <columns>ParentProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MaxInternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MaxExternalProductPerformance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.ShareClass</value>
        </filters>
        <label>Products with Prod Perf - Share Class</label>
        <sharedTo>
            <group>CDR</group>
            <group>Product_Mgmt_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Share_Classes_Active</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>LegalName__c</columns>
        <columns>ShareClassName__c</columns>
        <columns>ParentProduct__c</columns>
        <columns>TradingSymbol__c</columns>
        <columns>CUSIPFormatted__c</columns>
        <columns>InceptionDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.ShareClass</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Share Classes - Active</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Benchmark</fullName>
        <active>true</active>
        <description>Use this for Benchmarks</description>
        <label>Benchmark</label>
    </recordTypes>
    <recordTypes>
        <fullName>ETF</fullName>
        <active>true</active>
        <description>Use this for ETFs</description>
        <label>ETF</label>
    </recordTypes>
    <recordTypes>
        <fullName>MutualFund</fullName>
        <active>true</active>
        <description>Use this for Mutual Fund products</description>
        <label>Mutual Fund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Use this for other types of products and products that have not been classified</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShareClass</fullName>
        <active>true</active>
        <description>Use this for Share Class products</description>
        <label>Share Class</label>
    </recordTypes>
</CustomObject>